--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Pomodoro Timer</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
@@ -9,18 +11,34 @@
 <body>
 
     <div class="top-left">
-        <button id="changeBgBtn">Change Background</button><br>
-        <button id="changeMusicBtn">Change Music 🎵</button>
-
+        <button id="changeBgBtn" class="img-button">
+            <img id="changeBgImg" src="/static/buttons/change-bg.png" alt="Change Background">
+        </button>
+          
+        <button id="changeMusicBtn" class="img-button">
+            <img id="changeMusicImg" src="/static/buttons/change-music.png" alt="Change Music">
+        </button>
     </div>
     
 
-    <div class="container">
-        <h1>🍅 Pomodoro Timer</h1>
-        <div id="timer">25:00</div>
-        <button id="startBtn">Start</button>
-        <button id="resetBtn">Reset</button>
+    <div class="pomodoro-panel">
+        <img src="/static/images/pomodoro_panel.png" alt="Pomodoro Panel" class="panel-bg">
+    
+        <div class="panel-content">
+            <div id="timer">25:00</div>
+    
+            <div class="panel-buttons">
+                <button id="startBtn" class="img-button">
+                    <img id="startImg" src="/static/buttons/start.png" alt="Start">
+                </button>
+    
+                <button id="resetBtn" class="img-button">
+                    <img id="resetImg" src="/static/buttons/reset.png" alt="Reset">
+                </button>
+            </div>
+        </div>
     </div>
+    
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <audio id="bgMusic" autoplay loop></audio>
