--- a/static/styles.css
+++ b/static/styles.css
@@ -44,8 +44,8 @@ body {
     font-family: 'VT323', monospace;
     font-size: 60px;
     font-weight: bold;
-    color: #4a2e6a;
-    margin-top: 180px;
+    color: #df6fae;
+    margin-top: 100px;
 }
 
 
@@ -53,12 +53,12 @@ body {
 .img-button {
     background: none;
     border: none;
-    padding: 0;
+    padding: 50;
     margin: 0;
     line-height: 0;
     cursor: pointer;
     width: 200px;
-    height: 200px;
+    height: 100px;
     overflow: hidden;
 }
 
