--- a/static/styles.css
+++ b/static/styles.css
@@ -16,7 +16,7 @@ body {
 /* Panel Container */
 .pomodoro-panel {
     position: relative;
-    width: 600px;
+    width: 500px;
     height: 400px;
     display: flex;
     justify-content: center;
@@ -44,7 +44,7 @@ body {
     font-family: 'VT323', monospace;
     font-size: 60px;
     font-weight: bold;
-    color: #df6fae;
+    color: #9b4f71;
     margin-top: 100px;
 }
 
@@ -92,8 +92,8 @@ body {
 }
 
 .top-left .img-button {
-    width: 200px; 
-    height: 50px;
+    width: 245px; 
+    height: 60px;
 }
 
 .top-left .img-button img {
