--- a/templates/index.html
+++ b/templates/index.html
@@ -43,5 +43,10 @@
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <audio id="bgMusic" autoplay loop></audio>
 
+    <footer class="footer">
+        <p>© 2025 Emily Zhang | All rights reserved.</p>
+      </footer>
+      
+
 </body>
 </html>
