--- a/static/styles.css
+++ b/static/styles.css
@@ -101,3 +101,13 @@ body {
     height: 100%;
     object-fit: cover;
 }
+
+.footer {
+    position: fixed;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+    color: #9b4f71;
+  }
+  
