added sharing link feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,9 @@
     <meta property="og:description" content="A cute, pixel-perfect timer with lofi music and cozy vibes.">
     <meta property="og:image" content="https://cozy-pomodoro-emilyzzzhang.onrender.com/static/images/preview.jpg">
     <meta property="og:url" content="https://cozy-pomodoro-emilyzzzhang.onrender.com/">
+    <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
+
 
     
 </head>
